--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ coilCompose = "2.6.0"
 kotlinxSerialization = "1.9.0"
 kotlinxSerializationJson = "1.6.3"
 navigationCompose = "2.8.0-beta01"
+navtypeparcelablehelperlibrary = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +38,8 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose"
 # compose navigatioon library
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+# helper library for handling Custom Parcelable NavTypes with ease
+navtype-parcelable-helper-library = { module = "com.github.ioannisa:NavTypeParcelableHelperLibrary", version.ref = "navtypeparcelablehelperlibrary" }
 
 
 [plugins]
